# planning

./: README.md  claude.md  course_map.md  create_module_files.py
module-0-introduction-open-source/: assignment-open-source-discovery.md  lecture-business-models-sustainability.md  lecture-class-introduction-course-overview.md  lecture-community-development-governance.md  lecture-gis-ecosystem-overview.md  lecture-licensing-legal-considerations.md  lecture-open-source-philosophy-history.md
module-1-github-repository-management/: assignment-github-hello.md  lecture-contributing-open-source.md  lecture-github-features-collaboration.md  lecture-github-platform-overview.md  lecture-professional-development-workflows.md  lecture-repository-structure-organization.md
module-2-source-code-management-git/: assignment-github-branch.md  assignment-github-desktop.md  lecture-advanced-git-operations.md  lecture-branch-management-strategies.md  lecture-collaborative-development-pull-requests.md  lecture-git-fundamentals-version-control.md  lecture-github-desktop-workflow.md
module-3-qgis-desktop-gis/: assignment-qgis-team-mapping-project.md  assignment-qgis-tutorials-intro.md  (+8 more)
module-5-python-gis-programming/python-geopandas-intro/: .gitignore  PROJECT_STATUS.md  README.md  calculate_grade.py  grade-summary.md  pyproject.toml
module-5-python-gis-programming/python-geopandas-intro/.github/scripts/: calculate_grade.py
module-5-python-gis-programming/python-geopandas-intro/.github/workflows/: automated-grading.yml
module-5-python-gis-programming/python-geopandas-intro/data/: README.md  arizona_cities.geojson  arizona_counties.dbf  arizona_counties.geojson  arizona_highways.dbf  arizona_highways.geojson  arizona_highways.shp  arizona_parks.dbf  arizona_parks.shx
module-5-python-gis-programming/python-geopandas-intro/data/cities/: sample_cities.geojson  world_cities.dbf
module-5-python-gis-programming/python-geopandas-intro/notebooks/: 01_spatial_data_overview.ipynb  02_load_spatial_data.ipynb  03_spatial_joins_analysis.ipynb  05_coordinate_systems.ipynb
module-5-python-gis-programming/python-geopandas-intro/src/geopandas_analysis/: spatial_data_loading.py  spatial_joins_analysis.py  visualization_mapping.py
module-5-python-gis-programming/python-geopandas-intro/tests/: __init__.py  test_spatial_data_loading.py  test_spatial_joins_analysis.py  test_visualization_mapping.py
module-5-python-gis-programming/python-pandas/: PROJECT_STATUS.md  README.md  pyproject.toml  pytest.ini  requirements.txt
module-5-python-gis-programming/python-pandas/.github/scripts/: calculate_grade.py
module-5-python-gis-programming/python-pandas/.github/workflows/: automated-grading.yml  test-and-grade.yml
module-5-python-gis-programming/python-pandas/benchmarks/: performance_tests.py
module-5-python-gis-programming/python-pandas/data/: environmental_stations.csv  infrastructure_inventory.csv  sample_environmental_data.csv
module-5-python-gis-programming/python-pandas/notebooks/: 03_function_calculate_station_statistics.ipynb
module-5-python-gis-programming/python-pandas/src/: pandas_basics.py
module-5-python-gis-programming/python-pandas/src/pandas_analysis/: __init__.py  data_joins.py  data_structures.py  data_subsetting.py  file_operations.py
module-5-python-gis-programming/python-pandas/tests/: __init__.py  test_data_joins.py  test_data_structures.py  test_data_subsetting.py  test_file_operations.py  test_pandas_basics.py
module-5-python-gis-programming/python-rasterio/: README_SIMPLIFIED.md  pyproject.toml  test_my_functions.py  walkthrough_notebook.ipynb
module-5-python-gis-programming/python-rasterio/data/: create_sample_data.py
module-5-python-gis-programming/python-rasterio/src/rasterio_analysis/: __init__.py  cog_operations.py  memory_efficient.py  stac_integration.py  stac_integration_backup.py
module-5-python-gis-programming/python-rasterio/src_simplified/rasterio_analysis/: applications.py  band_math.py  raster_basics.py
module-5-python-gis-programming/python-rasterio/tests/: test_cog_operations.py  test_memory_efficient.py  test_performance.py  test_raster_processing.py  test_raster_vector.py  test_stac_integration.py  test_windowed_processing.py
module-5-python-gis-programming/python-rasterio/tests_simplified/: test_raster_basics.py
module-5-python-gis-programming/rasterio/: COMPLETION_SUMMARY.md  DEPLOYMENT_CHECKLIST.md  IMPLEMENTATION_GUIDE.md  INSTRUCTOR_NOTES.md  README.md  RECONCILIATION_SUMMARY.md  SIMPLIFICATION_RECOMMENDATIONS.md  original_assignment.md  pyproject.toml
module-5-python-gis-programming/rasterio/.github/scripts/: calculate_grade.py
module-5-python-gis-programming/rasterio/.github/workflows/: test-and-grade.yml
module-5-python-gis-programming/rasterio/data/: README_SETUP.md  create_sample_data.py  requirements.txt  setup_rasterio_data.py  test_setup.py
module-5-python-gis-programming/rasterio/data/data/: README.md
module-5-python-gis-programming/rasterio/data/data/downloads/srtm_temp/: srtm_22_08.tfw
module-5-python-gis-programming/rasterio/data/data/raster/: landsat8_phoenix_synthetic.tif
module-5-python-gis-programming/rasterio/data/data/vector/: phoenix_study_area.geojson  sample_points.geojson
module-5-python-gis-programming/rasterio/notebooks/: 01_function_load_and_explore_raster.ipynb  02_function_calculate_raster_statistics.ipynb  03_function_extract_raster_subset.ipynb  04_function_visualize_raster_data.ipynb
module-5-python-gis-programming/rasterio/src/: rasterio_basics.py
module-5-python-gis-programming/rasterio/tests/: __init__.py  test_load_and_explore.py
module-5-python-gis-programming/rasterio/tests_simplified/: test_band_math.py
module-6-postgis-spatial-database/postgis-basics-old-python/: README.md  pyproject.toml
module-6-postgis-spatial-database/postgis-basics-old-python/.github/workflows/: test-and-grade.yml
module-6-postgis-spatial-database/postgis-basics-old-python/data/: data_dictionary.md  init.sql
module-6-postgis-spatial-database/postgis-basics-old-python/tests/: test_postgis_basics.py
(+234 files in other folders)
